# LightningDB

./: .analyst.yml  .analyst.yml.bak  .dockerignore  .gitattributes  .gitignore  .ralph-plan-prompt.md  ARCHITECTURE.md  AUDIT.md  AUDIT_FULL_REPORT.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  CYPHER_REFERENCE.md  Cargo.toml  DEEP_AUDIT_FULL_2024.md  DEEP_AUDIT_REPORT.md  Dockerfile  FIX_PLAN_ENGINEERING.md  IMPLEMENTATION_PLAN.md  LICENSE  LLMS.md  LLM_REMEDIATION_PLAN.md  LLM_REMEDIATION_PLAN_2.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE_REMEDIATION_PLAN.md  PERFORMANCE_TUNING.md  PLAN_1_2_4.md  PRODUCTION_READINESS.md  README.md  RELATIONSHIP_TRAVERSAL_REMAINING_ISSUES.md  ROADMAP.md  SECURITY.md  USABILITY_AUDIT.md  deny.toml  findings.jsonl  findings.md  libnull.rlib  pyproject.toml  query_test.rs  (+1 more)
crates/lightning/: Cargo.toml
crates/lightning-core/: Cargo.toml
crates/lightning-core/.analyst_data/findings.lb/: AnalystFinding__id.lbug  AnalystFinding_agent.lbug  AnalystFinding_category.lbug  AnalystFinding_confidence.lbug  AnalystFinding_created_at.lbug  AnalystFinding_description.lbug  AnalystFinding_end_line.lbug  AnalystFinding_file_path.lbug  AnalystFinding_fingerprint.lbug  AnalystFinding_id.lbug  AnalystFinding_pk_index.lbug  AnalystFinding_reasoning.lbug  AnalystFinding_run_id.lbug  AnalystFinding_severity.lbug  AnalystFinding_start_line.lbug  AnalystFinding_suggested_fix.lbug  AnalystFinding_symbol.lbug  AnalystFinding_title.lbug  AnalystRunMeta_cost_cap.lbug  AnalystRunMeta_created_at.lbug  AnalystRunMeta_model.lbug  AnalystRunMeta_pk_index.lbug  AnalystRunMeta_run_id.lbug  AnalystRunMeta_target_path.lbug  catalog.lbug  database.header
crates/lightning-core/.forge/lightning/: Entity_content.lbug  Entity_id.lbug  Entity_metadata.lbug  Entity_pk_index.lbug  Entity_type.lbug  Entity_valid_from.lbug  Entity_valid_until.lbug  catalog.lbug  database.header  overflow.lbug
crates/lightning-core/.forge/tasks/: task-1.json
crates/lightning-core/.fusion_mcp.db/: CodeNode__id.lbug  CodeNode_docstring.lbug  CodeNode_end_line.lbug  CodeNode_file_path.lbug  CodeNode_id.lbug  CodeNode_name.lbug  CodeNode_node_type.lbug  CodeNode_pk_index.lbug  CodeNode_signature.lbug  CodeNode_source_hash.lbug  CodeNode_start_col.lbug  CodeNode_start_line.lbug  CodeNode_workspace_id.lbug  FileHash__id.lbug  FileHash_file_path.lbug  FileHash_hash.lbug  FileHash_pk_index.lbug  FileHash_workspace_id.lbug  Observation_pk_index.lbug  Workspace_id.lbug  Workspace_pk_index.lbug  Workspace_root_path.lbug  catalog.lbug  database.header  overflow.lbug  wal.lbug
crates/lightning-core/.fusion_mcp.db/CodeNode_fts/: .managed.json  meta.json
crates/lightning-core/.fusion_mcp.db/FileHash_fts/: .managed.json  meta.json
crates/lightning-core/.fusion_mcp.db/Message_fts/: meta.json
crates/lightning-core/:memory:/: catalog.lbug  database.header
crates/lightning-core/examples/: agent_memory.rs  test_read_ts.rs  test_single_insert.rs
crates/lightning-core/src/: api.rs  audit.rs  capi.rs  cdc.rs  fusion.rs  lib.rs  memory.rs  pool.rs  rust_out  wasm_function.rs
crates/lightning-core/src/.analyst_data/: analyst-report-run-20260601-132658.html
crates/lightning-core/src/.analyst_data.bak/: analyst-report-run-20260601-124853.json  analyst-report-run-20260601-132658.json
crates/lightning-core/src/.fusion_mcp.db/: Calls_dst.lbug  Calls_src.lbug  CodeNode__id.lbug  CodeNode_docstring.lbug  CodeNode_end_line.lbug  CodeNode_file_path.lbug  CodeNode_id.lbug  CodeNode_name.lbug  CodeNode_node_type.lbug  CodeNode_pk_index.lbug  CodeNode_signature.lbug  CodeNode_source_hash.lbug  CodeNode_start_col.lbug  CodeNode_start_line.lbug  CodeNode_workspace_id.lbug  FileHash_pk_index.lbug  Imports_dst.lbug  Imports_src.lbug  Workspace_id.lbug  Workspace_pk_index.lbug  Workspace_root_path.lbug  catalog.lbug  database.header
crates/lightning-core/src/catalog/: catalog.rs  lazy_catalog.rs  mod.rs
crates/lightning-core/src/optimizer/: acc_hash_join_optimizer.rs  agg_key_dependency_optimizer.rs  cardinality_estimator.rs  count_rel_table_optimizer.rs  factorization_rewriter.rs  filter_pushdown.rs  foreign_join_pushdown.rs  index_pushdown.rs  join_reordering.rs  limit_pushdown.rs  mod.rs  order_by_pushdown.rs  projection_pushdown.rs  semijoin_pushdown.rs  subquery_unnesting.rs  topk_optimizer.rs
crates/lightning-core/src/parser/: ast.rs  (+3 more)
crates/lightning-core/tests/: aggregate_comprehensive_test.rs  benchmark_suite.rs  buffer_manager_test.rs  comprehensive_test.rs  comprehensive_test_3.rs  comprehensive_test_4.rs  compression_integration_test.rs  compression_test.rs  contains_edge_test.rs  contains_test.rs  crash_recovery_test.rs  date_test.rs  ddl_comprehensive_test.rs  dml_comprehensive_test.rs  edge_case_test.rs  explain_test.rs  expression_comprehensive_test.rs  expression_test.rs  extreme_test.rs  flatten_comprehensive_test.rs  flatten_test.rs  function_aggregate_test.rs  function_test.rs  fusion_bench.rs  hash_join_comprehensive_test.rs  hash_join_test.rs  index_comprehensive_test.rs  index_test.rs  intersect_test.rs  join_operator_test.rs  memory_store_test.rs  merge_test.rs  optimizer_comprehensive_test.rs  optimizer_test.rs  parser_comprehensive_test.rs  production_crucible_1.rs  production_crucible_2.rs  production_crucible_3.rs  projection_pushdown_test.rs  reachability_comprehensive_test.rs  (+19 more)
crates/lightning-python/: Cargo.toml
crates/lightning-python/src/: lib.rs
crates/lightning-server/: Cargo.toml
crates/lightning-server/src/: config.rs  error.rs  extract.rs  lib.rs  main.rs  server.rs  streaming.rs
crates/lightning/src/: connection.rs  database.rs  lib.rs  memory.rs  types.rs
lightning/: .aer.yml  .analyst.yml  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLMS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  findings.md  pyproject.toml
lightning/.analyst_data/findings.lb/: database.header
lightning/crates/lightning-core/: Cargo.toml
lightning/crates/lightning-node/: Cargo.toml
lightning/python/lightning/: langchain.py  llama_index.py
(+14220 files in other folders)
