[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lightning-client"
version = "0.1.0"
requires-python = ">=3.9"
description = "HTTP client for LightningDB — graph+vector+RAG database for AI agent memory"
authors = [{ name = "Lightning Developers" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/BViganotti/lightning"
Repository = "https://github.com/BViganotti/lightning"

[tool.setuptools.packages.find]
where = ["python"]
