[package]
name = "lightning-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lightning-types.workspace = true
lightning-arrow.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tempfile.workspace = true
libc = "0.2"
arrow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
pest = "2.7"
pest_derive = "2.7"
# antlr4rust 0.x is experimental/pre-1.0: the API surface is unstable and may
# change between minor releases. Pin to 0.5 for now. If the grammar stabilizes,
# consider migrating to a production-grade parser (logos + lalrpop, or a stable
# ANTLR4 binding like antlr4-tools-rs once available).
antlr4rust = "0.5"
roaring.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rayon.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true
regex = "1.10"
sha2 = { workspace = true }
md-5 = { workspace = true }
crc32fast = { workspace = true }
crc = { workspace = true }
# tantivy 0.26 — full-text search index for memory entities.
# Pinned to the 0.26.x line. Upgrade to 0.27 after verifying the columnar
# and tokenizer API surfaces are compatible.
tantivy = "0.26"
lru = "0.16.3"
fixedbitset = "0.5.7"
wat = "1.248.0"
# wasmi 2.0.0-beta.2 is pinned intentionally: the code uses the wasmi 2.x API
# (Engine, Store, Module::new(&engine, ...)), which is incompatible with the
# stable 1.x line. Upgrade to wasmi 2.0.0 stable once released. wasmi is chosen
# over lighter alternatives (e.g., wasm3, microruntime) because full wasmi
# provides the best balance of spec compliance, embeddability (pure-Rust), and
# performance for scalar-function evaluation within graph queries. A lighter
# trampoline could be considered if the WASM surface shrinks in the future.
# Risk: if 2.0.0 final ships breaking changes, the beta pin may lag behind.
wasmi = "2.0.0-beta.2"
rand = "0.8"

[dev-dependencies]
# rusqlite is a dev-only dependency used for testing SQLite interop.
# It is not part of the runtime library build and is excluded from
# production builds. Do not move to [dependencies].
rusqlite = { version = "0.37", features = ["bundled"] }
