[package]
name = "lightning-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lightning-core.workspace = true
crossbeam.workspace = true
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1.0"
arrow = { workspace = true }
