[package]
name = "lightning-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for LightningDB — graph+vector+RAG database for AI agent memory"

[[bin]]
name = "lightning-server"
path = "src/main.rs"

[dependencies]
lightning-core = { path = "../lightning-core" }
lightning = { path = "../lightning" }
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "net", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
# utoipa = { version = "5", features = ["axum_extras"] }
# utoipa-swagger-ui disabled temporarily
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
futures = "0.3"
arrow = { workspace = true }
thiserror = { workspace = true }
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
zeroize = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
