[package]
name = "lightning-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lightning-core.workspace = true
napi = { version = "3", features = ["napi4", "napi6", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"
serde = { workspace = true }
serde_json.workspace = true
crossbeam.workspace = true
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "1"
